objects/BlueBerryVenue__c.object
<CustomObject>
    <description>Custom table to store Venue details containing Venue Name, Address, Phone and Capacity</description>
    <fields>
        <fullName>VenueAddress__c</fullName>
        <label>VenueAddress</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Capacity__c</fullName>
        <label>Venue Capacity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue_Contact__c</fullName>
        <label>Venue Contact</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>BlueBerryVenue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BlueBerryVenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>